helm/ingress_vault.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: vault
    namespace: vault
  spec:
    ingressClassName: nginx
    rules:
      - host: vault.2.aws.padok.cloud
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: vault
                  port:
                    number: 8200
              path: /
